# phone_replacement

./: .clang-format  .gitignore  README.md  todo.md  west.yml
PCB/: #auto_saved_files#  PCB.kicad_pcb  PCB.kicad_prl  PCB.kicad_pro  PCB.kicad_sch  PCB.kicad_sch-bak  _autosave-PCB.kicad_pcb  _autosave-PCB.kicad_sch  fp-info-cache  fp-lib-table  sym-lib-table  ~PCB.kicad_pcb.lck
PCB/BOTTOM-PCB/: BOTTOM-PCB.kicad_pcb  BOTTOM-PCB.kicad_pro  BOTTOM-PCB.kicad_sch
PCB/TOP-PCB/: TOP-PCB.kicad_pcb  TOP-PCB.kicad_pro  TOP-PCB.kicad_sch
PCB/components/: 21-100586_K20331C_ADI.step
PCB/components/12402012E212A/: AMPHENOL_12402012E212A.kicad_mod
PCB/components/2659/: 2659.kicad_mod  2659.kicad_sym
PCB/components/ABS07_32_768KHZ_T(1)/: XTAL_ABS07-32.768KHZ-T.kicad_mod
PCB/components/AMCA31_2R450G_S1F_T3/: XDCR_AMCA31-2R450G-S1F-T3.kicad_mod
PCB/components/ASMB_KTF0_0A306/: ASMB-KTF0-0A306.kicad_sym  LED_ASMB-KTF0-0A306.kicad_mod
PCB/components/BME688/: IC_BME688.kicad_mod
PCB/components/BQ27427YZFR/: BQ27427YZFR.kicad_sym  IC_BQ27427YZFR.kicad_mod
PCB/components/CONMHF1_SMD_T/: CONMHF1-SMD-T.kicad_sym  TE_CONMHF1-SMD-T.kicad_mod
PCB/components/CX2016DB40000D0FLJCC/: CX2016DB40000D0FLJCC.kicad_sym  OSC_CX2016DB40000D0FLJCC.kicad_mod
PCB/components/DRV2605LDGSR/: DRV2605LDGSR.kicad_sym  SOP50P490X110-10N.kicad_mod
PCB/components/ESP32_S3/: IC_ESP32-S3.kicad_mod
PCB/components/KSS231G/: 2025-08-28_16-07-45.kicad_sym
timer_code/: CMakeLists.txt  prj.conf
timer_code/boards/: adafruit_feather_m0_lora.overlay
timer_code/src/: main.c
(+48 files in other folders)
